@@ -2481,7 +2481,9 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_fax### -->
 ###LABEL_FAX###: ###FIELD_fax###
 <!-- ###SUB_INCLUDED_FIELD_fax### -->
+<!-- ###SUB_INCLUDED_FIELD_email### -->
 ###LABEL_EMAIL###: ###FIELD_email###
+<!-- ###SUB_INCLUDED_FIELD_email### -->
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 ###LABEL_USERGROUP###:
 ###TCA_INPUT_usergroup###
